# mdviewer

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  PROJECT.md  README.md  package-lock.json  package.json
docs/plans/: 2026-04-27-core-features.md  2026-04-27-mdviewer-implementation.md  2026-04-28-macos-file-open.md  2026-04-28-tauri-2-migration.md  2026-04-29-window-title-and-multi-window.md  2026-05-01-macos-file-open-deadlock-fix.md  2026-05-01-tauri-2-frontend-backend-mismatches.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
