[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mdviewer_core"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
pulldown-cmark = "0.13.3"
pulldown-cmark-to-cmark = "22.0.0"
ammonia = "4.1.2"
notify = "8.0.0"
