[package]
name = "mdviewer"
version = "1.3.0"
description = "A lightweight Markdown viewer"
authors = ["Rajat Arya <rajat@rajatarya.com>"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.94"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mdviewer_core"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["wry", "custom-protocol"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
pulldown-cmark = "0.13.3"
pulldown-cmark-to-cmark = "22.0.0"
ammonia = "4.1.2"
notify = "8.0.0"
regex = "1.10.6"
serde_yaml = "0.9"
urlencoding = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.1"
